<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_app_screen">

    <View
        android:id="@+id/v_title"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:background="@drawable/bg_content_panel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speech_dictation_title"
        android:textColor="@color/text_primary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/v_title"
        app:layout_constraintLeft_toLeftOf="@id/v_title"
        app:layout_constraintRight_toRightOf="@id/v_title"
        app:layout_constraintTop_toTopOf="@id/v_title" />

    <TextView
        android:id="@+id/tv_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="52dp"
        android:text="@string/speech_dictation_ready"
        android:textColor="@color/text_secondary"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/v_title" />

    <EditText
        android:id="@+id/et_result"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="52dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/bg_register_input"
        android:gravity="top|left"
        android:hint="@string/speech_dictation_result_hint"
        android:inputType="textMultiLine"
        android:minLines="8"
        android:padding="16dp"
        android:textColor="@color/text_primary"
        android:textColorHint="@color/text_muted"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@id/ll_actions"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_status" />

    <LinearLayout
        android:id="@+id/ll_actions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="42dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/tv_start"
            android:layout_width="116dp"
            android:layout_height="44dp"
            android:background="@drawable/bg_register_primary_button"
            android:gravity="center"
            android:text="@string/speech_dictation_start"
            android:textColor="@color/accent_cyan"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_stop"
            android:layout_width="96dp"
            android:layout_height="44dp"
            android:layout_marginLeft="12dp"
            android:background="@drawable/bg_control_button"
            android:gravity="center"
            android:text="@string/speech_dictation_stop"
            android:textColor="@color/text_primary"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_import_audio"
            android:layout_width="132dp"
            android:layout_height="44dp"
            android:layout_marginLeft="12dp"
            android:background="@drawable/bg_control_button"
            android:gravity="center"
            android:text="@string/speech_dictation_import"
            android:textColor="@color/text_primary"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_clear"
            android:layout_width="96dp"
            android:layout_height="44dp"
            android:layout_marginLeft="12dp"
            android:background="@drawable/bg_control_button"
            android:gravity="center"
            android:text="@string/speech_dictation_clear"
            android:textColor="@color/text_primary"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="96dp"
            android:layout_height="44dp"
            android:layout_marginLeft="12dp"
            android:background="@drawable/bg_control_button"
            android:drawableLeft="@mipmap/ic_back_arrow"
            android:drawablePadding="6dp"
            android:gravity="center"
            android:text="@string/common_back"
            android:textColor="@color/text_primary"
            android:textSize="16sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
